--- a/index.html
+++ b/index.html
@@ -138,13 +138,14 @@
         }
 
         .affirmation {
-            font-size: clamp(3rem, 12vw, 10rem);
+            font-size: clamp(3rem, 10vmin, 8rem);
             font-weight: 900;
             line-height: 1.1;
             text-transform: uppercase;
             letter-spacing: -0.02em;
             word-wrap: break-word;
             max-width: 100%;
+            text-wrap: balance;
             transition: color 0.5s ease;
         }
 
@@ -404,6 +405,124 @@
             height: 16px;
         }
 
+        /* Laptop / MacBook Pro */
+        @media (max-width: 1440px) {
+            .category-grid {
+                grid-template-columns: repeat(4, 1fr);
+                gap: 1rem;
+                max-width: 850px;
+            }
+
+            .affirmation {
+                font-size: clamp(2rem, 6.5vmin, 4rem);
+                line-height: 1.05;
+                text-wrap: balance;
+            }
+
+            .affirmation-category {
+                font-size: clamp(0.75rem, 1.5vw, 1rem);
+                margin-bottom: 0.5rem;
+            }
+
+            .slide-container {
+                padding: 1.5rem;
+            }
+
+            .category-title {
+                font-size: clamp(1.5rem, 4vw, 2.5rem);
+            }
+
+            .category-subtitle {
+                font-size: clamp(0.65rem, 1.25vw, 0.875rem);
+                margin-bottom: 1.5rem;
+            }
+
+            .navigation {
+                right: 1.25rem;
+            }
+
+            .nav-btn {
+                width: 50px;
+                height: 50px;
+            }
+
+            .nav-btn svg {
+                width: 22px;
+                height: 22px;
+            }
+
+            .back-btn {
+                top: 1.25rem;
+                left: 1.25rem;
+                padding: 0.5rem 1rem;
+                font-size: 0.7rem;
+            }
+
+            .back-btn svg {
+                width: 14px;
+                height: 14px;
+            }
+
+            .healing-badge {
+                top: 1.25rem;
+                font-size: 0.6rem;
+            }
+
+            .slide-counter {
+                top: 1.25rem;
+                right: 1.25rem;
+                font-size: 0.7rem;
+            }
+
+            .playing-indicator {
+                top: 3.5rem;
+                font-size: 0.55rem;
+            }
+
+            .slide-number {
+                bottom: 1.25rem;
+                font-size: 0.75rem;
+            }
+
+            .autoplay-container {
+                bottom: 1.25rem;
+                left: 1.25rem;
+                gap: 0.5rem;
+            }
+
+            .autoplay-btn {
+                width: 50px;
+                height: 50px;
+            }
+
+            .autoplay-btn svg {
+                width: 22px;
+                height: 22px;
+            }
+
+            .screenshot-btn {
+                width: 38px;
+                height: 38px;
+            }
+
+            .screenshot-btn svg {
+                width: 18px;
+                height: 18px;
+            }
+
+            .timer-display {
+                font-size: 0.75rem;
+                min-width: 45px;
+            }
+
+            .restart-btn {
+                bottom: 1.25rem;
+                right: 1.25rem;
+                padding: 0.6rem 1.25rem;
+                font-size: 0.75rem;
+            }
+        }
+
         /* Tablet Landscape */
         @media (max-width: 1200px) {
             .category-grid {
@@ -413,7 +532,9 @@
             }
 
             .affirmation {
-                font-size: clamp(2.5rem, 10vw, 8rem);
+                font-size: clamp(1.75rem, 6vmin, 4rem);
+                line-height: 1.1;
+                text-wrap: balance;
             }
         }
 
@@ -430,12 +551,14 @@
             }
 
             .category-subtitle {
-                font-size: clamp(0.75rem, 1.5vw, 1rem);
+                font-size: clamp(0.65rem, 1.5vh, 0.875rem);
                 margin-bottom: 2rem;
             }
 
             .affirmation {
-                font-size: clamp(2rem, 8vw, 6rem);
+                font-size: clamp(1.5rem, 6vmin, 3.5rem);
+                line-height: 1.1;
+                text-wrap: balance;
             }
 
             .affirmation-category {
@@ -443,7 +566,7 @@
             }
 
             .slide-container {
-                padding: 1.5rem;
+                padding: 1.25rem;
             }
 
             .navigation {
@@ -541,8 +664,10 @@
             }
 
             .affirmation {
-                font-size: clamp(1.75rem, 7vw, 4.5rem);
+                font-size: clamp(1.25rem, 5vmin, 2.5rem);
                 letter-spacing: -0.01em;
+                line-height: 1.1;
+                text-wrap: balance;
             }
 
             .affirmation-category {
@@ -686,9 +811,10 @@
             }
 
             .affirmation {
-                font-size: clamp(1.5rem, 10vw, 3.5rem);
+                font-size: clamp(1.1rem, 4vmin, 2rem);
                 line-height: 1.15;
                 letter-spacing: 0;
+                text-wrap: balance;
             }
 
             .affirmation-category {
@@ -816,7 +942,8 @@
             }
 
             .affirmation {
-                font-size: clamp(1.25rem, 11vw, 3rem);
+                font-size: clamp(1rem, 4vmin, 1.75rem);
+                text-wrap: balance;
             }
 
             .nav-btn,
@@ -879,7 +1006,8 @@
             }
 
             .affirmation {
-                font-size: clamp(1.25rem, 6vh, 3rem);
+                font-size: clamp(1rem, 5vmin, 2rem);
+                text-wrap: balance;
             }
 
             .affirmation-category {
